tests/bad_reserved_name_struct.stderr
tests/bad_reserved_name_struct.hop:2:8: error: HOP2008: identifier prefix '__hop_' is reserved
tests/bad_reserved_name_struct.hop:2:8: hint: HOP2008: rename symbol to avoid '__hop_' prefix
