tests/bad_reserved_name_struct.hop
// Verifies bad reserved name struct.
struct __hop_bad {}
